testsuite/tests/properties/invalid_array_lit/empty_ok.lkt
import common

class Example: FooNode {
    @exported fun p(): Array[Bool] = []: Bool
}
